# ArcheoSensei

./: .env.example  .gitignore  README.md  backend_rust.Dockerfile  docker-compose.yml
.github/workflows/: ci.yml  deploy-backend.yml
.github_bak/workflows/: ci.yml
Rust-backend/: Cargo.toml  backend_rust.Dockerfile
Rust-backend/src/: config.rs  db.rs  embedder.rs  ingest.rs  jobs.rs  llm.rs  main.rs  models.rs  retrieve.rs  routes.rs
backend/: backend.Dockerfile  pyproject.toml  requirements.txt
backend/app/: db.py  embed.py  ingest.py  jobs.py  llm.py  logging_utils.py  main.py  retrieve.py  schemas.py  settings.py
backend/tests/: test_health.py
docker/: backend.Dockerfile  frontend.Dockerfile  worker.Dockerfile
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/public/pdfjs/web/: viewer.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/turnstile/verify/: route.ts
frontend/src/app/chat/: page.tsx
frontend/src/components/: AuthGate.tsx
frontend/src/lib/: api.ts  chat.ts  profile.ts
scripts/: create_image_assets.sql  create_supabase_auth.sql  dev-up.ps1
worker/: requirements.txt
worker/ingestion/: cli.py
